# Generals.OI

./: .gitignore  CMakeLists.txt  Generals.OI.pro  README.CN.md  README.md
res/: generals.qrc  generals.rc
res/qss/: GameWindowWidgets.qss  TitleBar.qss  WindowWidgets.qss
src/: main.cpp  test-generate.cpp  test-recorder.cpp
src/endWindow/: endWindow.cpp  endWindow.h
src/gameButton/: gameButton.cpp  gameButton.h
src/gameInformation/: gameInformation.cpp  gameInformation.h
src/gameMap/basicMap/: basicMap.cpp  basicMap.h
src/gameMap/clientMap/: clientMap.cpp  clientMap.h
src/gameMap/globalMap/: globalMap.cpp  globalMap.h
src/gameMap/mapGenerator/: mapGenerator.cpp  mapGenerator.h
src/gameMap/serverMap/: mapGenerator.cpp  serverMap.cpp  serverMap.h
src/gameMapEditor/: gameMapEditor.cpp  gameMapEditor.h  gameMapEditor.ui  sizeEditor.ui
src/gameMapGrid/: gameMapGrid.cpp  gameMapGrid.h
src/gameMapGrid/gameButton/: gameButton.cpp  gameButton.h
src/gameWindow/: boardLabel.cpp  focus.cpp  gameWindow.cpp  gameWindow.h  highlighter.cpp  moveInfo.cpp
src/gameWindow/endWindow/: endWindow.cpp  endWindow.h  endWindow.ui
src/gameWindow/gameButton/: gameButton.cpp  gameButton.h
src/gameWindow/surrenderWindow/: surrenderWindow.cpp  surrenderWindow.h  surrenderWindow.ui
src/geometry/: geometry.cpp  geometry.h
src/globalMap/: globalMap.cpp  globalMap.h
src/playerInfo/: playerInfo.cpp  playerInfo.h
src/point/: point.cpp  point.h
src/processJson/: processJson.h
src/recorder/: recorder.h
src/replayWindow/: controlPanel.ui  replayWindow.cpp  replayWindow.h
src/server/: server.cpp  server.h
src/server/recorder/: recorder.cpp  recorder.h
src/server/serverSettingsWindow/: serverSettingsWindow.cpp  serverSettingsWindow.ui
src/server/serverTray/: serverTray.cpp  serverTray.h
src/server/serverWindow/: serverWindow.cpp  serverWindow.h  serverWindow.ui
src/serverMap/: generate.cpp  serverMap.cpp  serverMap.h
src/serverSettingsWindow/: serverSettingsWindow.cpp  serverSettingsWindow.h  serverSettingsWindow.ui
src/startWindow/: startWindow.cpp  startWindow.h  startWindow.ui
src/startWindow/teamButton/: teamButton.cpp  teamButton.h
src/titleBar/: titleBar.cpp  titleBar.h
src/windowFrame/: windowFrame.cpp  windowFrame.h
src/windowFrame/titleBar/: titleBar.cpp  titleBar.h
